// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifGrid/> Deberia de mostrar items cuando se cargan imagenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounce animate__fadeIn"
  >
    Monkey D. Luffy
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Super Vegeta"
      url="http://gph.is/2tsV7lY"
    />
    <GifGridItem
      id="DEF"
      key="DEF"
      title="Super Vegeta"
      url="http://gph.is/2tsV7lY"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el componente <GifGrid/> Deberia de mostrase <GifGrid/> correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounce animate__fadeIn"
  >
    Monkey D. Luffy
     
  </h3>
  <p
    className="animate__animated animate__bounce animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
